--- a/index.html
+++ b/index.html
@@ -46,5 +46,18 @@
       <div class="quote"><em>This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  Who knows?  All I know is that it looks nice.</em></div>
       <div class="person">-Thor, God of Thunder</div>
     </div> 
+<!-- This is the end of section three of the 5 section website --> 
+<!-- This is the start of section four of the 5 section website --> 
+    <div class="section-4">
+      <div class="container-4"> 
+        <div class="left-4">
+        <div class="call-to-action"><strong>Call to action! It's time!</strong></div>
+        <div class="lower-stuff">Sign up for our product by clicking that button right over there</div>
+        </div>
+        <div class="right-4">
+        <button>Sign Up</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
